<resources>
    <string name="app_name">EdgeDetector</string>
    <string name="action_OpenGallery">Open Image File</string>
    <string name="action_GrayScale">To grayscale</string>
    <string name="action_PerspectiveTransform">Perspective Transform</string>
    <string name="action_EdgeDetector">Edge detector</string>
    <string name="action_LinesDetector">Detect lines</string>
    <string name="action_ExtractPointsOfInterest">Extract Points Of Interest</string>
    <string name="action_GapiTest">Test G-API</string>
    <string name="action_Median">Median filter</string>
    <string name="action_Bilateral">Bilateral filter</string>
    <string name="action_Canny">Canny</string>
    <string name="action_AddNoise">Add noise</string>
    <string name="action_Morphology">Morphology</string>
    <string name="action_CirclesDetector">detect circles</string>
</resources>
