<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_openGallery"
        app:showAsAction="never"
        android:title="@string/action_OpenGallery"/>
    <item
        android:id="@+id/action_transformer"
        app:showAsAction="never"
        android:title="@string/action_PerspectiveTransform"/>
    <item
        android:id="@+id/action_grayscale"
        app:showAsAction="never"
        android:title="@string/action_GrayScale"/>
    <item
        android:id="@+id/action_addnoise"
        app:showAsAction="never"
        android:title="@string/action_AddNoise"/>
    <item
        android:id="@+id/action_median"
        app:showAsAction="never"
        android:title="@string/action_Median"/>
    <item
        android:id="@+id/action_bilateral"
        app:showAsAction="never"
        android:title="@string/action_Bilateral"/>
    <item
        android:id="@+id/action_morphology"
        app:showAsAction="never"
        android:title="@string/action_Morphology"/>
    <item
        android:id="@+id/action_edgedetector"
        app:showAsAction="never"
        android:title="@string/action_EdgeDetector"/>
    <item
        android:id="@+id/action_canny"
        app:showAsAction="never"
        android:title="@string/action_Canny"/>
    <item
        android:id="@+id/action_linesdetector"
        app:showAsAction="never"
        android:title="@string/action_LinesDetector"/>
    <item
        android:id="@+id/action_gapi_test"
        app:showAsAction="never"
        android:title="@string/action_GapiTest"/>
    <item
        android:id="@+id/action_extractpoi"
        app:showAsAction="never"
        android:title="@string/action_ExtractPointsOfInterest"/>

</menu>